--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,11 @@
        <a href="list.html">list</a><br> 
         <a href="Table.html">Table</a><br>
         <a href ="version of html.html">version</a><br>
+        <a href="FormCreation.html">formcreate</a><br>
+        <a href="all task.html">task</a><br>
+        <a href="startofJC.html">javaScript</a><br>
+        <a href="1Javascript.js">script</a><br>
+        <a href="linkingJavaScript.html">linking script</a><br>
 
     </body>
     </html>
