--- a/linkingJavaScript.html
+++ b/linkingJavaScript.html
@@ -11,7 +11,7 @@
             <div>Enter Number1</div>
             <input id="num1">
             <div>Enter Number2</div>
-            <input id="Num2">
+            <input id="num2">
 
             <button onclick="sum()">Add</button>
             <div id="result"></div>
