--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Index</title>
+        <title>index</title>
     </head>
     <body>
        <a href="1 page.html">First</a><br> 
